<resources>
    <string name="app_name">DoorLock</string>
    <string name="main_add_btn">Add new device</string>
    <string name="main_no_device">No device added yet</string>
    <string name="main_title">Smart Door Lock</string>
    <string name="device_name">Device Name</string>
    <string name="wifi_title">Setup information</string>
    <string name="wifi_name">Name (SSID)</string>
    <string name="password">Password</string>
    <string name="wifi_no_pwd">No Password</string>
    <string name="wifi_check_ok">Checked! Correct SSID and password</string>
    <string name="wifi_check_no">Please check your SSID and password, again!</string>
    <string name="wifi_allow_setting">Please allow modify system setting</string>
    <string name="hotspot_stop">Hotspot stopped!</string>
    <string name="hotspot_scan">Scanning connected clients!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="connect">Connect</string>
    <string name="stream">Stream</string>
    <string name="delete">Delete</string>
    <string name="hint_device_name">Smart Lock</string>
    <string name="hint_wifi_ssid">mlv-door5g</string>
    <string name="hint_wifi_pwd">wlsfkaus</string>

    <string name="username">Username</string>
    <string name="user_pwd">Login setup</string>
    <string name="default_login">admin</string>
    <string name="login_incorrect">Incorrect username or password</string>
    <string name="streaming_key">Streaming key</string>

    <string name="toast_save">Setup Information Stored!</string>
    <string name="toast_exist">Device already addedd!</string>
    <string name="toast_name_ssid">Device name and Wifi SSID should not be empty!</string>
    <string name="toast_len">Device name should not be longer than 10 characters!</string>
    <string name="toast_update">Setup Information Updated!</string>
    <string name="toast_delete">Setup Information Deleted!</string>
    <string name="toast_config">Successfully configured!</string>
    <string name="toast_no_device">No device available in your WIFI network</string>

    <string name="progress_connect_wifi">Connecting to your setup WIFI</string>
    <string name="progress_scan">Finding your Smart Door Lock</string>

    <string name="copyright">Copyrights @MLV Inc. 2021</string>

    <string name="lang_ch">Change language</string>
    <string name="lang_en">English</string>
    <string name="lang_vi">Tiếng việt</string>
    <string name="lang_ko">한국어</string>

</resources>