<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.35"
            android:gravity="center_vertical|center"
            android:text="@string/device_name">
        </TextView>
        <EditText
            android:id="@+id/edit_device_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.65"
            android:gravity="center_vertical|center"
            android:inputType="text"
            android:hint="@string/hint_device_name">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/edit_ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center_vertical|center"
            android:text="@string/ok"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
        <Button
            android:id="@+id/edit_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center_vertical|center"
            android:text="@string/cancel"
            style="?android:attr/buttonBarButtonStyle">
        </Button>
    </LinearLayout>

</LinearLayout>