<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:textSize="30sp"
        android:gravity="center_vertical|center"
        android:text="@string/main_title">
    </TextView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_gravity="top"
        android:layout_weight="0.8"
        android:orientation="vertical">

        <TextView
            android:id="@+id/empty_device_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center"
            android:textSize="20sp"
            android:text="@string/main_no_device">
        </TextView>
        <ListView
            android:id="@+id/device_list"
            android:layout_width="fill_parent"
            android:visibility="gone"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_add_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:text="@string/main_add_btn"></Button>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_gravity="top"
        android:layout_weight="0.05"
        android:orientation="vertical">
    </LinearLayout>

</LinearLayout>