<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.35"
            android:gravity="center_vertical|center"
            android:text="@string/device_name">
        </TextView>
        <EditText
            android:id="@+id/device_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.65"
            android:gravity="center_vertical|center">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.35"
            android:gravity="center_vertical|center"
            android:text="@string/wifi_name">
        </TextView>
        <EditText
            android:id="@+id/wifi_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.65"
            android:gravity="center_vertical|center">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.2"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.35"
            android:gravity="center_vertical|center"
            android:text="@string/wifi_no_pwd">
        </TextView>
        <CheckBox
            android:id="@+id/wifi_cbx"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.65"
            android:gravity="center_vertical|center">
        </CheckBox>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/wifi_pwd_layout"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.35"
            android:gravity="center_vertical|center"
            android:text="@string/wifi_pwd">
        </TextView>
        <EditText
            android:id="@+id/wifi_pwd"
            android:layout_width="0dp"
            android:inputType="textPassword"
            android:layout_height="match_parent"
            android:layout_weight="0.65"
            android:gravity="center_vertical|center">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/wifi_ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center_vertical|center"
            android:text="@string/ok">
        </Button>
        <Button
            android:id="@+id/wifi_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center_vertical|center"
            android:text="@string/cancel">
        </Button>
    </LinearLayout>

</LinearLayout>